# malphas/openapi/api.yaml
@@ -43,6 +43,17 @@ paths:
               schema:
                 $ref: "#/components/schemas/tokenDto"
 
+  /logout:
+    post:
+      tags:
+        - Authentication
+      operationId: logout
+      summary: Log out
+      description: Invalidate the current session
+      responses:
+        200:
+          description: OK
+
   /register:
     post:
       tags:
